--- a/src/ServiceReportAdmin/ServiceReportAdmin.css
+++ b/src/ServiceReportAdmin/ServiceReportAdmin.css
@@ -33,6 +33,8 @@ button {
     border: none; /* Remove default border */
     border-radius: 5px; /* Rounded corners */
     cursor: pointer; /* Pointer cursor on hover */
+    margin-top: 20px; /* Adds space above the button */
+    margin-right: 0px; /* Adds space between buttons */
 }
 
 button:hover {
@@ -41,7 +43,7 @@ button:hover {
 
 .cancel-button {
     background-color: #f44336; /* Red background for cancel button */
-    margin-left: 10px; /* Space between buttons */
+    margin-left: 0px; /* Space between buttons */
 }
 
 .cancel-button:hover {
