--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: maroon; /* Red background for the whole page */
+    background-color: #a60808; /* Red background for the whole page */
     margin: 0;
     font-family: Arial, sans-serif;
 }
