--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: maroon; /* Red background for the whole page */
+    background-color: #a60808; /* Red background for the whole page */
     margin: 0;
     font-family: Arial, sans-serif;
 }
@@ -66,5 +66,5 @@ button:hover {
     display: block; /* Center the logo */
     margin: 20px auto; /* Add margin above and below */
     width: 80%; /* Adjust width as needed */
-    max-width: 200px; /* Set a max width for responsiveness */
+    max-width: 500px; /* Set a max width for responsiveness */
 }
